--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -119,12 +119,12 @@
         <div class="row">
 
             <div class="col-md-12">
-                <h4 class="wow fadeInLeft animated">Nous passons en moyenne<span> 5j par an </span>dans une file d’attente,
+                <h4 class="wow fadeInLeft animated">Nous passons en moyenne<span> 5 jours par an </span>dans une file d’attente,
                   c’est à dire que dans votre vie, nous allons passer<span> une année entière à attendre.</span>
-                  Notre ambition est d’améliorer la qualité de la vie quotidienne. Notre service permet<span> d’optimiser ces tâches quotidiennes </span>
-                  en ne prenant plus compte de l’attente éventuelle. 
+                  Notre ambition est d’améliorer la qualité de la vie quotidienne. Notre service permet<span> d’optimiser ses tâches quotidiennes </span>
+                  en ne prenant plus compte de l’attente éventuelle.
                     <br><br>
-                  <span>Pensez à tout ce que l’on pourrait faire, pourrait vivre !!</span> Les professionnels se heurtent à des problèmes de file d’attente tout les jours,
+                  <span>Pensez à tout ce que l’on pourrait faire, pourrait vivre !</span> Les professionnels se heurtent à des problèmes de file d’attente tout les jours,
                   ils n’en peuvent plus et <span>nous non plus !</span>
                 </h4>
             </div>
@@ -190,10 +190,10 @@
 
             <div class="col-md-12">
                 <h3 class="wow fadeIn animated">Cette solution facilite le quotidien de <span>tous les professionnels gérant des files d’attente !</span></h3>
-                <p class="wow fadeIn animated">  Les professionnels de l’évènementiel, des billetteries, les prestataires
+                <p class="wow fadeIn animated"> Les professionnels de l’évènementiel, des billetteries, les prestataires
                   (médecins libéraux, esthétique, bien-être..), les gérants d'espaces de loisirs et culturels..
                   Cette solution est pour ceux qui ont un intérêt à diminuer la densité de leurs files d’attente
-                  afin d’améliorer leur expérience client et accroître leurs ventes.</p>
+                  afin d’améliorer leur expérience client et d'accroître leurs ventes.</p>
                 <br><br>
                   <p class="wow fadeIn animated"> Fini les heures passées devant une attraction !</p>
                   <p class="wow fadeIn animated"> Fini les interminables queues à la préfecture ou aux services publics !</p>
@@ -268,7 +268,7 @@
                         </div><br><br>
 
                         <div class="bottom-info">
-                            <h4 class="wow fadeIn animated"><span>Connectez-vous</span> avec nous</h4>
+                            <h4 class="wow fadeIn animated"><span>Retrouvez nous</span> sur les réseaux</h4>
 
                             <ul class="list-inline social-icons wow fadeIn animated">
                                 <li>
