--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -115,10 +115,10 @@
         <div class="row">
 
             <div class="col-md-12 service-headline">
-                <h2 class="wow fadeIn animated"> La géolocalisation de Google, directement sur <span> votre plan !</span></h2>
+                <h2 class="wow fadeIn animated"> Le systeme GPS de Google, adapté à <span> votre plan !</span></h2>
                 <p class="wow fadeIn animated">
-                  Nous vous apportons notre expertise pour fournir un plan intéractif de votre espace à vos clients. <br>
-                  Aidez vos visiteurs à s'orienter.
+                  Nous vous fournissons un plan intéractif de votre espace à vos clients. <br>
+                  Aidez vos visiteurs à s'orienter sans papier.
                 </p>
             </div>
             <!-- /.service-headline -->
@@ -223,7 +223,7 @@
                         </div><br><br>
 
                         <div class="bottom-info">
-                            <h4 class="wow fadeIn animated"><span>Connectez-vous</span> avec nous</h4>
+                            <h4 class="wow fadeIn animated"><span>Retrouvez nous</span> sur les réseaux</h4>
 
                             <ul class="list-inline social-icons wow fadeIn animated">
                                 <li>
@@ -305,7 +305,7 @@
 <script src="assets/js/libraries/wow.js"></script>
 <!-- Custom Particle Theme JavaScript -->
 <script>
-    var sentences = ["Le plan interactif de votre entreprise, pour vos clients "];
+    var sentences = ["Orientez vos clients sur votre plan interactif"];
 </script>
 <script src="assets/js/custom/service-item.js"></script>
 </body>
