--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -290,8 +290,12 @@
 <!-- Footer
 ================================================== -->
 <footer>
-    <p><a href="$">MORMAN DESIGN </a>© 2017<br><br><a href="$"> Confidentialité</a> |
-      <a href="$">Condition d'utilisation</a> | <a href="$">La loi informatique et liberté</a></p>
+    <p>
+        <a href="index.html">MORMAN DESIGN </a>© 2017
+        <br>
+        <br>
+        <a href="mentions-legales.html">Mentions légales</a>
+    </p>
 </footer>
 
 <!-- Scritps
