--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -647,11 +647,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 ================================================== -->
 <footer>
     <p>
-        <a href="$">MORMAN DESIGN </a>© 2017
+        <a href="index.html">MORMAN DESIGN </a>© 2017
         <br>
         <br>
-        <a href="$"> Confidentialité</a> |
-      <a href="$">Condition d'utilisation</a> | <a href="$">La loi informatique et liberté</a>
+        <a href="mentions-legales.html">Mentions légales</a>
     </p>
 </footer>
 
