--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -606,7 +606,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="contact-form">
                         <h4 class="wow fadeIn animated">Envoyez nous <span>un message...</span></h4>
 
-                        <form method="post">
+                        <form method="post" action="contact.php" >
                             <div class="form-group wow fadeIn animated">
                                 <label for="name">Votre Nom - Prénom - Société : </label>
                                 <input type="text" id="name" name="name" class="form-control">
