--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -189,7 +189,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                 <div class="col-md-6 col-sm-6 col-xs-6">
                     <div class="portfolio-img second" onClick="window.open('file_dattente.html');">
-                        <img class="img-responsive" src="assets/images/attente.jpg"
+                        <img class="img-responsive" src="assets/images/attente.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
                         <div class="sweep-from-center">
