--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -80,15 +80,16 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     
 <!-- Hero Section
 ================================================== -->
-<section id="hero" class="hero-section-video">
-    <div class="video-overlay"></div>
-    <!-- /.video-overlay -->
-    <div class="hero-video">
-        <video autoplay loop poster="assets/video/particle-video-v1-light.jpg" id="bgvid">
-            <source src="assets/video/particle-video-v1-light.webm" type="video/webm">
-            <source src="assets/video/particle-video-v1-light.mp4" type="video/mp4">
-        </video>
-    </div>
+<section id="hero" class="hero-section-yt-light">
+
+        <div class="video-background">
+            <div class="video-foreground">
+
+                <div id="yt-player"></div>
+
+            </div>
+        </div>
+    
     <div class="container-fluid">
 
         <div class="row">
@@ -366,7 +367,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         </div>
                     </div>
                     <br>
-                    <br>
                     <div class="service wow fadeIn animated">
                         <div class="text">
                             <h4>Une visibilité améliorée</h4>
@@ -403,7 +403,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                               votre chiffre d'affaires, gestion de relances clients</p>
                         </div>
                     </div>
-                    <br>
                     <div class="service-2 wow fadeIn animated">
                         <div class="icons">
                             <i class="material-icons">autorenew</i>
@@ -675,7 +674,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Custom Particle Theme JavaScript -->
 <script>
     var sentences = ["Des experts en conception digitale développent des solutions simples", "et efficaces pour votre évolution professionnelle !"];
+    // YouTube
+    var videoId = 'IldnaqVR18A';
 </script>
-<script src="assets/js/custom/particle-theme-light.js"></script>
+<script src="assets/js/custom/particle-theme-light-yt.js"></script>
 </body>
 </html>
