--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -80,17 +80,15 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     
 <!-- Hero Section
 ================================================== -->
-<section id="hero" class="hero-section-yt-light">
-
-        <div class="video-background">
-            <div class="video-foreground">
-
-                <div id="yt-player"></div>
-
-            </div>
-        </div>
-    
-    <div class="container-fluid">
+<section id="hero" class="hero-section-video">
+    <div class="video-overlay"></div>
+    <!-- /.video-overlay -->
+    <div class="hero-video">
+        <video autoplay loop poster="assets/video/particle-video-v1-light.jpg" id="bgvid">
+            <source src="assets/video/particle-video-v1-light.webm" type="video/webm">
+            <source src="assets/video/particle-video-v1-light.mp4" type="video/mp4">
+        </video>
+    </div>
 
         <div class="row">
 
