--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -77,16 +77,16 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     </nav>
 </div>
 <!-- /#st-nav -->
-    
+
 <!-- Hero Section
 ================================================== -->
 <section id="hero" class="hero-section-video">
     <div class="video-overlay"></div>
     <!-- /.video-overlay -->
     <div class="hero-video">
-        <video autoplay loop poster="assets/video/particle-video-v1-light.jpg" id="bgvid">
-            <source src="assets/video/particle-video-v1-light.webm" type="video/webm">
-            <source src="assets/video/particle-video-v1-light.mp4" type="video/mp4">
+        <video autoplay loop poster="assets/video/caroussel_1.jpg" id="bgvid">
+          <!--  <source src="assets/video/particle-video-v1-light.webm" type="video/webm"> -->
+            <source src="assets/video/sequence.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -108,7 +108,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!-- /.container-fluid -->
 </section>
 <!-- /.hero-section -->
-    
+
 <!-- Image Section
 ================================================== -->
 <section id="big-image" class="image-section">
