--- a/particle_dark_video/index.html
+++ b/particle_dark_video/index.html
@@ -85,9 +85,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <div class="video-overlay"></div>
     <!-- /.video-overlay -->
     <div class="hero-video">
-        <video autoplay loop poster="assets/video/particle-video-v1-dark.jpg" id="bgvid">
-            <source src="assets/video/particle-video-v1-dark.webm" type="video/webm">
-            <source src="assets/video/particle-video-v1-dark.mp4" type="video/mp4">
+        <video autoplay loop poster="assets/video/caroussel_1.jpg"  id="bgvid">
+           <source src="assets/video/sequence01.webm" type="video/webm"> -->
+            <source src="assets/video/sequence01.mp4" type="video/mp4">
         </video>
     </div>
     <div class="container-fluid">
