--- a/particle_dark_yt/index.html
+++ b/particle_dark_yt/index.html
@@ -84,8 +84,10 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <section id="hero" class="hero-section-yt-dark">
     <div class="video-background">
         <div class="video-foreground">
+          <img class="img-responsive" src="assets/images/caroussel_1.jpg">
 
             <div id="yt-player"></div>
+
 
         </div>
     </div>
@@ -696,7 +698,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     // Typed JS
     var sentences = ["This is The Particle Theme", "Click on the live effect!", "Coolest Modern HTML Theme"];
     // YouTube
-    var videoId = "cRwob9y2YXg";
+    var videoId = "IldnaqVR18A";
 </script>
 <script src="assets/js/custom/particle-theme-dark-yt.js"></script>
 </body>
