--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -89,7 +89,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <source src="assets/video/sequence.mp4" type="video/mp4">
         </video>
     </div>
-
+    
+    <div class="container-fluid">
         <div class="row">
 
             <div class="col-lg-12">
