--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -226,7 +226,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- About Us Section
 ================================================== -->
 <section id="about" class="about-section">
-
     <div class="container">
 
         <div class="row">
@@ -290,6 +289,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Quote Section
 ================================================== -->
 <section id="quote" class="quote-section">
+    <div class="video-overlay"></div>
 
     <div class="container-fluid">
 
@@ -524,7 +524,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <!-- Contact Section
 ================================================== -->
 <section id="contact" class="contact-section">
-
+<div class="video-overlay"></div>
     <div class="container">
 
         <div class="row">
