--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -89,7 +89,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <source src="assets/video/sequence.mp4" type="video/mp4">
         </video>
     </div>
-    
+
     <div class="container-fluid">
         <div class="row">
 
@@ -669,9 +669,8 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 <script src="assets/js/libraries/jquery.counterup.js"></script>
 <!-- Custom Particle Theme JavaScript -->
 <script>
-    var sentences = ["Des experts en conception digitale développent des solutions simples", "et efficaces pour votre évolution professionnelle !"];
-    // YouTube
-    var videoId = 'IldnaqVR18A';
+    var sentences = ["Des experts en conception digitale développent des solutions adaptées pour vous !"];
+
 </script>
 <script src="assets/js/custom/particle-theme-light-yt.js"></script>
 </body>
