--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -71,7 +71,7 @@
 <!-- Portfolio Item
 ================================================== -->
 <section class="portfolio-item">
-
+    <div class="video-overlay"></div>
     <div class="container-fluid">
 
         <div class="row">
