--- a/particle_dark/file_dattente.html
+++ b/particle_dark/file_dattente.html
@@ -112,8 +112,7 @@
 
 <!-- Image Section
 ================================================== -->
-<section class="image-section" id="portfolio-details">
-
+<section class="image-section filedattente" id="portfolio-details">
     <div class="container">
 
         <div class="row">
@@ -124,8 +123,8 @@
                   Notre ambition est d’améliorer la qualité de la vie quotidienne. Notre service permet<span> d’optimiser ses tâches quotidiennes </span>
                   en ne prenant plus compte de l’attente éventuelle.
                     <br><br>
-                  <span>Pensez à tout ce que l’on pourrait faire, pourrait vivre !</span> Les professionnels se heurtent à des problèmes de file d’attente tout les jours,
-                  ils n’en peuvent plus et <span>nous non plus !</span>
+                  <span>Pensez à tout ce que l’on pourrait faire, pourrait vivre !</span> Vous vous heurtez à des problèmes de file d’attente tous les jours,
+                  vous n’en pouvez plus et <span>nous non plus !</span>
                 </h4>
             </div>
             <!-- /.col-md-12 -->
