--- a/particle_dark/cartographie.html
+++ b/particle_dark/cartographie.html
@@ -38,11 +38,11 @@
 <!-- Navigation Menu
 ================================================== -->
 <header>
-    <div id="st-logo"><a href="#"><img src="assets/images/logo-normal.png" alt="Logo"></a></div>
+    <div id="st-logo"><a href="#0"><img src="assets/images/logo-normal.png" alt="Logo"></a></div>
 </header>
 
 <div id="st-nav">
-    <a href="#" class="st-nav-trigger">Menu<span></span></a>
+    <a href="#0" class="st-nav-trigger">Menu<span></span></a>
 
     <nav id="st-main-nav">
         <ul>
@@ -62,7 +62,7 @@
                 <a class="page-scroll hvr-underline-from-center" href="index.html#skills">Nous choisir</a>
             </li>
             <li>
-                <a class="page-scroll hvr-underline-from-center" href="#contact">Contactez-nous</a>
+                <a class="page-scroll hvr-underline-from-center" href="index.html#contact">Contactez-nous</a>
             </li>
         </ul>
     </nav>
@@ -307,7 +307,6 @@
 <!-- JavaScript Libraries -->
 <script src="assets/js/libraries/typed.js"></script>
 <script src="assets/js/libraries/wow.js"></script>
-<!-- Custom Particle Theme JavaScript -->
 <script>
     var sentences = ["Orientez vos clients sur votre plan interactif"];
 </script>
