--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -112,38 +112,40 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 <!-- Image Section
 ================================================== -->
-<section id="big-image" class="image-section">
+<section id="big-image" class="image-section"></section>
+<!-- /.image section -->
+
+<section id="wedo" class="skills-section">
 
     <div class="container">
 
         <div class="row">
 
             <div class="col-md-12">
-                <h4 class="wow fadeInLeft animated">Nous vous aidons à mettre en place <span>vos
-                idées et votre savoir-faire</span> sur l’ensemble <span>des terminaux connectés</span>
-                    <br>
-                    <br>
-                Faites confiance à des experts de <span>la digitalisation des espaces de loisirs et culturels</span>
-                pour que votre univers <span>traverse les écrans</span> et touche vos visiteurs et prospects
-                    <br>
-                    <br>
-                Nous mettons en œuvre <span>des solutions simples et efficaces</span> sur tous les supports pour vous
-                    aider à gérer vos contenus et vos services <span>en toute autonomie</span>
-                </h4>
-                <a class= "page-scroll" href="#contact">
-                <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">Parlez-nous de vos besoins !</button>
-                </a>
+                <div class="skills-headline">
+                    <h3 class="wow fadeIn animated">
+                        Nous vous aidons à mettre en place <span>vos idées</span> et votre savoir-faire sur <span>l’ensemble des terminaux connectés</span>
+                    </h3>
+                    <h3 class="wow fadeIn animated">
+                        Faites confiance à des <span>experts de la digitalisation</span> des espaces de loisirs et culturels
+                        pour que votre univers traverse les écrans et touche vos <span>visiteurs et prospects</span>
+                    </h3>
+                    <h3 class="wow fadeIn animated">
+                        Nous mettons en œuvre des solutions <span>simples et efficaces</span> sur tous les supports pour vous
+                        aider à gérer vos contenus et vos services <span>en toute autonomie</span>
+                    </h3>
+                    <a class= "page-scroll" href="#contact">
+                        <button class="btn btn-default btn-lg wow fadeInRight hvr-sweep-to-right animated">
+                            Parlez-nous de vos besoins !
+                        </button>
+                    </a>
+                </div>
             </div>
             <!-- /.col-md-12 -->
         </div>
-        <!-- /.row -->
     </div>
-    <!-- /.container -->
 </section>
-<!-- /.image section -->
-
-<!-- Our Work Section
-================================================== -->
+    
 <section id="our-work" class="our-work-section">
 
     <div class="container-fluid">
@@ -207,12 +209,6 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div>
                     <!-- /.portfolio-img -->
                 </div>
-                <!-- /.col-md-3 -->
-
-
-                <!-- /.col-md-3 -->
-
-
                 <!-- /.col-md-3 -->
             </div>
             <!-- /.portfoli-images -->
