--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -178,6 +178,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         </div>
                                         <h3><a href="cartographie.html" target="_blank">La cartographie interactive</a></h3>
                                         <p>Plongez vos visiteurs dans votre univers</p>
+                                        <a href="cartographie.html" target="_blank">Cliquez pour en savoir plus !</a>
                                     </div>
                                 </div>
                             </div>
@@ -202,6 +203,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                     </div>
                                     <h3><a href="file_dattente.html" target="_blank">La file d'attente numérique</a></h3>
                                     <p>La révolution de l'attente est en marche</p>
+                                    <a href="cartographie.html" target="_blank">Cliquez pour en savoir plus !</a>
                                 </div>
                             </div>
                         </div>
