--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -84,9 +84,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <div class="video-overlay"></div>
     <!-- /.video-overlay -->
     <div class="hero-video">
-        <video autoplay loop poster="assets/video/caroussel_1.jpg" id="bgvid">
+        <video autoplay loop poster="assets/video/1_caroussel.jpg" id="bgvid">
           <!--  <source src="assets/video/particle-video-v1-light.webm" type="video/webm"> -->
-            <source src="assets/video/sequence.mp4" type="video/mp4">
+            <source src="assets/video/sequence1.mp4" type="video/mp4">
         </video>
     </div>
 
@@ -145,7 +145,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         </div>
     </div>
 </section>
-    
+
 <section id="our-work" class="our-work-section">
 
     <div class="container-fluid">
