--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -185,6 +185,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <div class="sweep-right"></div>
                     </div>
                     <!-- /.portfolio-img -->
+                    <div class='not-visible-little-screens'>
+                        <h3><a href="cartographie.html" target="_blank">La cartographie interactive</a></h3>
+                        <p>Plongez vos visiteurs dans votre univers</p>
+                        <a href="cartographie.html" target="_blank">Cliquez pour en savoir plus !</a>
+                    </div>
                 </div>
                 <!-- /.col-md-3 -->
 
@@ -210,6 +215,11 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="sweep-right"></div>
                     </div>
                     <!-- /.portfolio-img -->
+                    <div class='not-visible-little-screens'>
+                        <h3><a href="file-dattente.html" target="_blank">La file d'attente numérique</a></h3>
+                        <p>La révolution de l'attente est en marche</p>
+                        <a href="cartographie.html" target="_blank">Cliquez pour en savoir plus !</a>
+                    </div>
                 </div>
                 <!-- /.col-md-3 -->
             </div>
