remove open new tab on click

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -163,7 +163,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12 portfolio-images">
                 <div class="col-md-6 ">
-                    <div class="portfolio-img first" onClick="window.open('cartographie.html');">
+                    <div class="portfolio-img first">
                             <img class="img-responsive" src="assets/images/cartographie.jpg"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
@@ -176,9 +176,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                                 <i class="fa fa-eye" aria-hidden="true"></i>
                                             </a>
                                         </div>
-                                        <h3><a href="cartographie.html" target="_blank">La cartographie interactive</a></h3>
+                                        <h3><a href="cartographie.html">La cartographie interactive</a></h3>
                                         <p>Plongez vos visiteurs dans votre univers</p>
-                                        <a href="cartographie.html" target="_blank">Cliquez pour en savoir plus !</a>
+                                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
                                     </div>
                                 </div>
                             </div>
@@ -186,15 +186,15 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div>
                     <!-- /.portfolio-img -->
                     <div class='not-visible-little-screens'>
-                        <h3><a href="cartographie.html" target="_blank">La cartographie interactive</a></h3>
+                        <h3><a href="cartographie.html">La cartographie interactive</a></h3>
                         <p>Plongez vos visiteurs dans votre univers</p>
-                        <a href="cartographie.html" target="_blank">Cliquez pour en savoir plus !</a>
+                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
                     </div>
                 </div>
                 <!-- /.col-md-3 -->
 
                 <div class="col-md-6 col-sm-6 col-xs-6">
-                    <div class="portfolio-img second" onClick="window.open('file-dattente.html');">
+                    <div class="portfolio-img second">
                         <img class="img-responsive" src="assets/images/attente.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
@@ -206,9 +206,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                             <i class="fa fa-eye" aria-hidden="true"></i>
                                         </a>
                                     </div>
-                                    <h3><a href="file-dattente.html" target="_blank">La file d'attente numérique</a></h3>
+                                    <h3><a href="file-dattente.html">La file d'attente numérique</a></h3>
                                     <p>La révolution de l'attente est en marche</p>
-                                    <a href="cartographie.html" target="_blank">Cliquez pour en savoir plus !</a>
+                                    <a href="cartographie.html">Cliquez pour en savoir plus !</a>
                                 </div>
                             </div>
                         </div>
@@ -216,9 +216,9 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     </div>
                     <!-- /.portfolio-img -->
                     <div class='not-visible-little-screens'>
-                        <h3><a href="file-dattente.html" target="_blank">La file d'attente numérique</a></h3>
+                        <h3><a href="file-dattente.html">La file d'attente numérique</a></h3>
                         <p>La révolution de l'attente est en marche</p>
-                        <a href="cartographie.html" target="_blank">Cliquez pour en savoir plus !</a>
+                        <a href="cartographie.html">Cliquez pour en savoir plus !</a>
                     </div>
                 </div>
                 <!-- /.col-md-3 -->
