update js window open

--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -163,7 +163,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
             <div class="col-md-12 portfolio-images">
                 <div class="col-md-6 ">
-                    <div class="portfolio-img first">
+                    <div class="portfolio-img first" onClick="window.location.href='cartographie.html';">
                             <img class="img-responsive" src="assets/images/cartographie.jpg"
                                  alt="porftofilio thumbnail"/>
                             <div class="sweep-left"></div>
@@ -194,7 +194,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <!-- /.col-md-3 -->
 
                 <div class="col-md-6 col-sm-6 col-xs-6">
-                    <div class="portfolio-img second">
+                    <div class="portfolio-img second" onClick="window.location.href='file-dattente.html';">
                         <img class="img-responsive" src="assets/images/attente.png"
                              alt="porftofilio thumbnail">
                         <div class="sweep-left"></div>
