--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -31,7 +31,14 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-79154607-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
+        gtag('config', 'UA-79154607-3');
+    </script>
 </head>
 
 <!-- The #page-top ID is part of the scrolling feature -
