--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -434,6 +434,341 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 </section>
 <!-- /.service-section -->
 
+<!-- Services Section
+================================================== -->
+<section id="services" class="services-section">
+
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-md-12 service-headline">
+                <h2 class="wow fadeIn animated"> Des offres adaptées à <span> vos besoins !</span></h2>
+                <p class="wow fadeIn animated">
+                  Nous apportons notre expertise à votre entreprise pour booster votre chiffre d'affaires
+                  grâce au web. Nous concevons vos plateformes de communication digitale pour développer votre business.
+                </p><br><br><br>
+            </div>
+
+            <!-- /.service-headline -->
+          <div class="service-2 wow fadeIn animated">
+            <div class="col-lg-12 service-content">
+
+              <div class="row">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-2">
+                  <div class="text">
+                   <p> Web experience </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="text">
+                   <p> User experience </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="text">
+                   <p> Business experience </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="text">
+                   <p> Custom experience </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Visibilité accrue </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Référencement optimisé </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Plateformes web multisupport </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Application mobile adaptée </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Expérience utilisateur améliorée </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Fidélisation des clients </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Données clients exploitées </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Visualisation des prévisions </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Stratégie digitale personalisée </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-4">
+                  <div class="text">
+                  <p> Confection sur mesure </p>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-rouge">
+                      <i class="material-icons">close</i>
+                  </div>
+                </div>
+                <div class="col-sm-2">
+                  <div class="icons-vert">
+                      <i class="material-icons">check</i>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+            <!-- .service-content -->
+          </div>
+        </div>
+        <!-- /.row -->
+    </div>
+    <!-- /.container -->
+</section>
+<!-- /.service-section -->
+
 <!-- Call To Action Section
 ================================================== -->
 <section id="call-to" class="call-to-section">
