--- a/particle_dark/index.html
+++ b/particle_dark/index.html
@@ -436,7 +436,7 @@ the data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 <!-- Services Section
 ================================================== -->
-<section id="service" class="services-section">
+<section id="offers" class="services-section">
 
     <div class="container">
 
